<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="10dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/file_name"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/file_name"
                android:inputType="textPersonName"
                android:text="@string/nothing"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_contents"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtFileContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoSizeTextType="uniform"
                android:autofillHints="@string/file_contents"
                android:ellipsize="none"
                android:ems="10"
                android:hint="@string/file_contents"
                android:inputType="textMultiLine"
                android:text="@string/nothing"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/read_file"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_file"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/delete_file"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"
                android:autoSizeTextType="uniform"
                android:ellipsize="none"
                android:text="@string/nothing"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>